--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="/src/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + TS</title>
   </head>
   <body>
     <div id="app">
-      <h1>TypeScript Sandbox -modulo 5</h1>
+      <h1>Juego de 7 y medio</h1>
+      <img id="carta" src="https://raw.githubusercontent.com/Lemoncode/fotos-ejemplos/main/cartas/back.jpg" />
+      <div>
+        <button id="pedirCarta">Pedir carta</button>
+        <button id="meplanto">Me planto</button>
+      </div>
+      <div id="puntos"> </div>
+      <div id="resultado"></div> 
+      <button id="nuevaPartida">Nueva partida</button> 
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
