juego de 7 y medio acabado

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
         <button id="pedirCarta">Pedir carta</button>
         <button id="meplanto">Me planto</button>
       </div>
-      <div id="puntos"> </div>
-      <div id="resultado"></div> 
+      <div id="textos">
+        <div id="puntos"> </div>
+        <div id="resultado"></div> 
+      </div>
       <button id="nuevaPartida">Nueva partida</button> 
     </div>
     <script type="module" src="/src/main.ts"></script>
